jezu niech mnie ktoś zastrzeli

--- a/config/packages/validator.yaml
+++ b/config/packages/validator.yaml
@@ -1,5 +1,9 @@
 framework:
     validation:
+        enable_attributes: false
+        auto_mapping: []
+        # mapping:
+            # paths: ['%kernel.project_dir%/config/validator']
         # Enables validator auto-mapping support.
         # For instance, basic validation constraints will be inferred from Doctrine's metadata.
         #auto_mapping:
